external-crates/move/crates/move-compiler/tests/move_2024/expansion/missing_mutable_bind_or_pat.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03019]: invalid pattern
  ┌─ tests/move_2024/expansion/missing_mutable_bind_or_pat.move:9:22
  │
9 │             X::A(mut x) | X::B(_, _) => {
  │                      ^    ---------- right or-pattern does not
  │                      │     
  │                      left or-pattern binds variable x
  │
  = Both sides of an or-pattern must bind the same variables.

error[E03019]: invalid pattern
   ┌─ tests/move_2024/expansion/missing_mutable_bind_or_pat.move:18:32
   │
18 │             X::A(_) | X::B(mut x, _) => {
   │             -------            ^ right or-pattern binds variable x
   │             │                   
   │             left or-pattern does not
   │
   = Both sides of an or-pattern must bind the same variables.
